[package]
name = "DataDrivenSimulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"

gl_lib = { path = "../rust-gl-lib", optional = true}

[features]
oop = []
sdl = ["gl_lib"]

[profile.release]
debug = true